# Rodun

./: .gitignore  CMakeLists.txt  README.md
distResources/: Info.plist  bundle.mac.sh
distResources/icons/: icon.icns
src/: app.cpp  app.h  main.cpp  optimizer.cpp  optimizer.h  pdf_export.cpp  pdf_export.h  utils.cpp  utils.h
